--- a/src/renderer/components/header/template_1.html
+++ b/src/renderer/components/header/template_1.html
@@ -1,7 +1,7 @@
 <div style="height:100%;">
   <Row :gutter="16" style="background:#eee;padding: 26px 0 10px 10px;height: 100%">
      <Col span="2" v-for="tool in tools" style="margin:0" :key="tool.label">
-       <Card :bordered="false" shadow @click.native="onTool(tool.label)" :class="{disabled: true}">
+       <Card :bordered="false" shadow @click.native="onTool(tool.label)" :class="{disabled: tool.disabled }">
          <div style="text-align:center;" >
            <Icon :type="tool.icon" size="20"/>
            <h5>{{ tool.label }}</h5>
