--- a/src/renderer/assets/reset.css
+++ b/src/renderer/assets/reset.css
@@ -1,6 +1,8 @@
 html {
   height: 100%;
   overflow: -moz-hidden-unscrollable;
+  overflow-x: hidden;
+  user-select: none;
 }
 body {
   height: 100%;
