--- a/src/renderer/assets/redisbox.less
+++ b/src/renderer/assets/redisbox.less
@@ -1,3 +1,6 @@
+@nav-w: 50px;
+@header-h: 80px;
+
 .fade-enter-active, .fade-leave-active {
   transition-duration: 0.2s;
   transition-property: opacity;
