--- a/src/renderer/themes/index.less
+++ b/src/renderer/themes/index.less
@@ -1,4 +1,5 @@
-@import '~iview/src/styles/index.less';
-
+// @import '~iview/src/styles/index.less';
+@import '~ant-design-vue/dist/antd.less';
 // Here are the variables to cover, such as:
 // @primary-color: #8c0776;
+
