--- a/src/renderer/assets/reset.less
+++ b/src/renderer/assets/reset.less
@@ -1,3 +1,7 @@
+:root {
+  @window-min-width: 1000px;
+  @window-min-height: 600px;
+}
 html {
   height: 100%;
   overflow: -moz-hidden-unscrollable;
