调整数据持久化的包

--- a/src/assets/css/variables.scss
+++ b/src/assets/css/variables.scss
@@ -3,5 +3,8 @@ $grey-light: #F6F4F4;
 $grey-dark: #ECEAEA;
 $grey-1: #949292;
 
+$text-color: #747374;
+$text-color-sub: rgb(74, 73, 74);
+
 $aside-left-width: 240px;
 $top-bar-height: 54px
