--- a/src/assets/css/index.less
+++ b/src/assets/css/index.less
@@ -8,6 +8,7 @@ body {
     margin: 0;
     height: 100%;
     font-family: Helvetica;
+    color: rgb(52, 53, 56)
 }
 
 div {
@@ -17,4 +18,29 @@ div {
     height: 100%;
     // margin-top: 40px;
 }
+
+::-webkit-scrollbar {
+    width: 3px;
+    height: 3px;
+}
+::-webkit-scrollbar-thumb {
+    border-radius: 50px;
+    box-shadow: inset 0 0 #c3c6cf;
+}
+
+::-webkit-scrollbar-thumb:vertical, ::-webkit-scrollbar-thumb:horizontal{
+    background-color: rgb(197, 197, 197);
+    border-radius: 5px;
+}
+
+::-webkit-scrollbar-track {
+    border-radius: 5px;
+    background: rgb(241, 241, 241);
+}
+::-webkit-scrollbar-track-piece {
+    // background-color: aqua;
+    border-radius: 5px;
+}
+
+
 
