调整整体布局和交互

--- a/src/assets/css/variables.scss
+++ b/src/assets/css/variables.scss
@@ -1,10 +1,38 @@
+$orange-base: #ffa502;
+$orange-1: #eccc68;
+
+$red-base: #ff4757;
+$red-1: #ff6b81;
+
+$tomato-base: #ff6348;
+$tomato-1: #ff7f50;
+
+$green-base: #2ed573;
+$green-1: #7bed9f;
+
+$blue-base: #1e90ff;
+$blue-1: #70a1ff;
+$blue-2: #5352ed;
+$blue-3: #3742fa;
+
+$dark-1: #a4b0be;
+$dark-2: #747d8c;
+$dark-3: #57606f;
+$dark-4: #2f3542;
+
+$white: #ffffff;
+$grey-1: #f1f2f6;
+$grey-2: #dfe4ea;
+$grey-3: #ced6e0;
+
+$preset-colors: pink, magenta, red, volcano, orange, yellow, gold, cyan, lime, green, blue, geekblue,
+  purple;
 $divide-color: #EAE8E8;
 $grey-light: #F6F4F4;
 $grey-dark: #ECEAEA;
-$grey-1: #949292;
 
 $text-color: #747374;
 $text-color-sub: rgb(74, 73, 74);
 
-$aside-left-width: 240px;
+$aside-left-width: 340px;
 $top-bar-height: 54px
